[tool.poetry]
name = "repl_python3_Lavat-Bot-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
textblob = "^0.15.3"
Flask = "^2.0.1"
bs4 = "^0.0.1"
youtube_dl = "^2021.12.17"
pafy = "^0.5.5"
PyNaCl = "^1.4.0"
dhooks = "^1.1.4"
lyricsgenius = "^3.0.1"

# [tool.poetry.dev - dependencies]

# [build - system]
"discord.py" = "2.2.2"
# requires = ["poetry-core>=1.0.0"]
# build - backend = "poetry.core.masonry.api"
